--- a/TODO.txt
+++ b/TODO.txt
@@ -1,30 +1,17 @@
 ASAP:
-  - finish README
-  - license in each module?
-  - __author__ in each module?
-
-BIN:
-  - bin/cake production path/to/output.txt
+  - __author__, license in each module?
+  - create develop branch
 
 DOCS:
   - https://packaging.python.org/tutorials/creating-documentation/
   - sphinx? pydoc? tox?
   - doc/ vs docs/
 
-ETC:
-  - dev.json, staging.json, production.json
-
-PYPA:
-  - create account. check for name clash. see tutorial.
-  - `python setup.py sdist bdist_wheel clean --all` ?
-
 SRC:
-  - utensils: badger decorator with (delay,timeout) kwargs?
-  - utensils: adjust for different Python versions?
   - lint: flake8 + black?
-  - mypy: type hints?
+  - utensils: adjust for different Python versions?
   - timeit: speed trials?
+  - mypy: type hints?
 
 TEST:
-  - unittest? remove pytest from setup.py?
   - finish test_utensils.py
