--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,12 @@
 ASAP:
-  - merge with master
-  - finish README
+  - delete old repo (after dummy checks)
+  - extract README from portfolio
+  - etc: small.json, medium.json, large.json for bin/cake ?
   - release 1.0.0
+
+DOCKER:
+  - COPY specific folders instead of .dockerignore?
+  - do not copy /var folder.
 
 DOCS:
   - https://packaging.python.org/tutorials/creating-documentation/
@@ -12,29 +17,6 @@ KITCHEN:
   - build multiple images: pydiner:latest, pydiner:3.4, ...
   - Dockerfile build-arg for Python version?
   - kitchen commands must accept a tag (default 'latest')
-
-README:
-  - abstract:
-    - see dockerbash
-    - see kingofsnake
-    - see suneku
-  - basics:
-    - clone or download. do not install anything.
-    - modify setup.py first! (or delete it and use PYTHONPATH)
-    - can use PYTHONPATH and requirements.txt instead of setup.py
-    - explain all folders
-  - commands:
-    - check kitchen commands
-  - details:
-    - 'bake' installs from setup.py. use 'freeze' for speed.
-    - 'freeze' overwrites requirements.txt
-  - examples:
-    - bin/cake: save 10 billion FizzBuzz in 10 minutes
-    - minimal setup.py
-  - faq:
-    - logs go to STDOUT and STDERR. link to 12-Factor App.
-    - no exception hiding. link to Hiltmon and Toyoda quote.
-
 SRC:
   - utensils: adjust for different Python versions?
   - timeit: speed trials?
