--- a/TODO
+++ b/TODO
@@ -1,14 +1,11 @@
 ASAP:
   - simplify executable(s)
+  - double-check .gitignore
   - simplify tests. move tmp/ outside test/ folder.
-  - etc: small.json, medium.json, large.json ?
+  - trim requirements (Black runs separately)
+  - autoformat with Black
   - finish README
   - release 1.0.0
-
-DOCS:
-  - https://packaging.python.org/tutorials/creating-documentation/
-  - sphinx? pydoc? tox?
-  - doc/ vs docs/
 
 KITCHEN:
   - Dockerfile build-arg in FROM? (need it for Python version)
