--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 ASAP:
-  - double-check .gitignore for var/ and test/ files
   - simplify tests. move tmp/ outside test/ folder.
+  - double-check .gitignore for var/ and tmp/ files
   - finish README
   - release 1.0.0
 
